Implement WGAN loss

--- a/stageI/cfg/paintings.yml
+++ b/stageI/cfg/paintings.yml
@@ -14,7 +14,7 @@ TRAIN:
     SNAPSHOT_INTERVAL: 1000
     DISCRIMINATOR_LR: 0.0002
     GENERATOR_LR: 0.0002
-    LR_DECAY_EPOCH: 100
+    LR_DECAY_EPOCH: 150
     NUM_EMBEDDING: 4
     COEFF:
       KL: 2.0
@@ -23,3 +23,5 @@ GAN:
     EMBEDDING_DIM: 128
     DF_DIM: 64
     GF_DIM: 128
+    NETWORK_TYPE: "simple"
+    LOSS: 'default'
